parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-binary-0.snap
---
source: parser/src/lexer/mod.rs
description: 0b0
---
[
    Token {
        kind: Binary,
        value: Number(
            "0b0",
        ),
        start: 0,
        end: 3,
    },
]
