parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-binary-2.snap
---
source: parser/src/lexer/mod.rs
description: 0b10
---
[
    Token {
        kind: Binary,
        value: Number(
            "0b10",
        ),
        start: 0,
        end: 4,
    },
]
