parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-binary-3.snap
---
source: parser/src/lexer/lexer.rs
description: 0b11
---
[
    Token {
        kind: Binary,
        value: Number(
            "0b11",
        ),
        start: 0,
        end: 4,
    },
]
