parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-binary-5.snap
---
source: parser/src/lexer/mod.rs
description: 0b101
---
[
    Token {
        kind: Binary,
        value: Number(
            "0b101",
        ),
        start: 0,
        end: 5,
    },
]
